--- a/.github/workflows/surge_deployment.yaml
+++ b/.github/workflows/surge_deployment.yaml
@@ -17,7 +17,7 @@ jobs:
             - name: Install Yarn
               run: sudo apt update && sudo apt install yarn
             - name: Build React app
-              run: yarn build
+              run: yarn start
             - name: Install surge
               run: npm install -g surge
             - name: Run surge
