--- a/.github/workflows/surge_deployment.yaml
+++ b/.github/workflows/surge_deployment.yaml
@@ -12,12 +12,13 @@ jobs:
               uses: actions/setup-node@v2-beta
               with:
                 node-version: 12
-            - name: Preparing for Yarn Installlation
-              run: curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+            - uses: borales/actions-yarn@v2.0.0
+              with:
+                cmd: install # will run `yarn install` command
             - name: Install Yarn
               run: sudo apt update && sudo apt install yarn
             - name: Build React app
-              run: yarn start
+              run: yarn build
             - name: Install surge
               run: npm install -g surge
             - name: Run surge
